--- a/style.css
+++ b/style.css
@@ -1,7 +1,10 @@
 body {
-    background-color: powderblue;
+  margin-top: 100px;
+  background-image: url('IMAGE1.png');
+  background-position: center center;
+  background-repeat: no-repeat;
+  background-size: cover;
 }
-
 
 h1{
     margin-left: 10%;
@@ -14,28 +17,29 @@ h1{
 }
 
 .main {
-    width: 100%; 
-    height: auto; 
-    position: relative; 
-    background: powderblue;
-    margin: 0 auto
+    width: 100%;
+    height: auto;
+    position: relative;
+    margin: 0 auto;
 }
 
-.main img {
-    width: 100%; 
-    height: auto; 
+/*.main img {
+    width: 100%;
+    height: auto;
     position: absolute;
-}
+    opacity: 0.5;
+}*/
 
 .formBackground {
   width: 90%;
   max-width: 500px;
-  margin: 5% auto;
+  margin: 0 auto;
   position: relative;
   background: rgba(255, 255, 255, 0.01);
   box-shadow: 10px 10px 15px rgba(0, 0, 0, 0.7);
   border: 0.9px rgb(197, 202, 255) solid;
 }
+
 
 .container {
     padding: 35px;
@@ -63,12 +67,12 @@ label {
     margin: 5px 0 11px 0;
     display: block;
     border: none;
-    background: #ffffff99; 
+    background: #ffffff99;
     box-shadow: 10px 10px 15px rgba(0, 0, 0, 0.1);
   }
   
   input[type=text]:focus, input[type=password]:focus {
-    background: #ffffff99; 
+    background: #ffffff99;
     box-shadow: 10px 10px 15px rgba(4, 112, 170, 0.5);
     outline: none;
   }
